cleanup CreateSmallScaleCommercialTrafficDemand